# ITK

./: main.py  pyproject.toml
src/course_1/module_1/decorator/: lru_cache.py
src/course_1/module_1/meta/: meta_class.py
src/course_1/module_1/singleton/: singletons.py
src/course_1/module_3/: fetch_urls.py  fetch_urls_next_level.py
src/course_1/module_4/: multiprocessing_vs_threading.py
src/course_1/module_6/: proxy_app_asgi.py  proxy_app_wsgi.py
src/course_2/module_2/: config.py  distributed_lock.py  rate_limiter.py  redis_queue.py
src/course_4/: kvstore_pb2.py  kvstore_pb2_grpc.py
src/module_1/meta/: meta_class.py
src/module_1/singleton/: singleton_for_import.py  singletons.py
src/module_2/: search_element.py
src/module_3/: fetch_urls.py  fetch_urls_next_level.py  input_file.jsonl  results.jsonl  results2.jsonl
src/module_4/: factorials.json  multiprocessing_vs_threading.py
src/module_6/: proxy_app_asgi.py  proxy_app_wsgi.py
