[project]
name = "itk"
version = "0.1.0"
description = "ITK Projects"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "gunicorn>=25.0.1",
    "ijson>=3.4.0.post0",
    "matplotlib>=3.10.8",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "setuptools>=80.10.2",
    "uvicorn>=0.40.0",
    "wheel>=0.46.3",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
